--- a/l2t-context-menu.html
+++ b/l2t-context-menu.html
@@ -240,7 +240,7 @@ Custom property | Description | Default
             *
             */
             _getPosition: function (e) {
-                return e.pageX || e.pageY ? (t = e.pageX, n = e.pageY) :
+                return e.pageX || e.pageY ? (t = e.pageX - 220, n = e.pageY) :
                     (e.clientX || e.clientY) && (t = e.clientX + document.body.scrollLeft + document.documentElement.scrollLeft, n = e.clientY + document.body.scrollTop + document.documentElement.scrollTop),
                     { x: t, y: n }
             },
